[workspace.package]
version = "0.1.0"
authors = ["Sylvester Hesp <github@oisyn.nl>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oisyn/Advent2023"

[workspace]
resolver = "2"
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "util",
]

[workspace.dependencies]
anyhow = "1.0.75"
memmap = "0.7.0"
itertools = "*"
util = { version = "0.1.0", path = "util" }
